<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="detail_film_page_title">Film Details</string>
    <string name="language_preferences">Language Preferences</string>
    <string name="film_name">Film Name</string>
    <string name="film_score_percent">%d%%</string>
    <string name="show_more_description">Show More</string>
    <string name="show_less_description">Show Less</string>
    <string name="film_rating_symbol">TV-MA</string>
    <string name="film_duration">1h 22m</string>
    <string name="film_country_code_iso_alpha_2">FR</string>
    <string name="film_genre_headline">Genre:</string>
    <string name="film_genre">Comedy</string>
    <string name="film_release_date_title">Release \nDate:</string>
    <string name="film_release_date">02/08/2019</string>
    <string name="film_sample_progress_in_percent">80%</string>
    <string name="film_score_title">Film \nScore</string>
    <string name="film_overview_headline">Overview</string>
    <string name="film_overview_lorem_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus viverra nec lacus at bibendum. Aenean fermentum felis eget ex condimentum luctus. Integer gravida justo neque, eu pharetra ligula tincidunt sit amet.</string>
    <string name="iso_alpha2_us">US</string>
    <string name="iso_alpha2_id">ID</string>
    <string name="iso_alpha2_tw">TW</string>
    <string name="iso_alpha2_ru">RU</string>
    <string name="iso_alpha2_jp">JP</string>
    <string name="iso_alpha2_uk">UK</string>
    <string name="iso_alpha2_fr">FR</string>
    <string name="iso_alpha2_gb">GB</string>
    <string name="iso_alpha2_de">DE</string>
    <string name="iso_alpha2_cn">CN</string>
    <string name="mpaa_general_audiences">G</string>
    <string name="mpaa_parental_guidance_suggested">PG</string>
    <string name="mpaa_parents_strongly_cautioned_under_13">PG-13</string>
    <string name="mpaa_restricted">R</string>
    <string name="film_rate_12_only">12</string>
    <string name="film_rate_12_only_age_or_older">12+</string>
    <string name="film_rate_semua_umur">SU</string>
    <string name="tv_rate_canada_teens_certificate">TV-14</string>
    <string name="tv_rate_canada_adult_certificate">TV-MA</string>
    <string name="tv_rate_canada_kids_certificate">TV-PG</string>
    <string name="tv_rate_15_old_and_over">15</string>
    <string name="tv_rate_16_old_and_over">16</string>
    <string name="tv_rate_18_old_and_over">18</string>
    <string name="movies1_overview">Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</string>
    <string name="movies2_overview">When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</string>
    <string name="movies3_overview">Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</string>
    <string name="movies4_overview">Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</string>
    <string name="movies5_overview">The quiet family life of Nels Coxman, a snowplow driver, is upended after his son\'s murder. Nels begins a vengeful hunt for Viking, the drug lord he holds responsible for the killing, eliminating Viking\'s associates one by one. As Nels draws closer to Viking, his actions bring even more unexpected and violent consequences, as he proves that revenge is all in the execution.</string>
    <string name="movies6_overview">Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</string>
    <string name="movies7_overview">Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause—elevating wizards above all non-magical beings. The only one capable of putting a stop to him is the wizard he once called his closest friend, Albus Dumbledore. However, Dumbledore will need to seek help from the wizard who had thwarted Grindelwald once before, his former student Newt Scamander, who agrees to help, unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world.</string>
    <string name="movies8_overview">In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</string>
    <string name="movies9_overview">As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</string>
    <string name="movies10_overview">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
    <string name="movies11_overview">In 1561, Mary Stuart, widow of the King of France, returns to Scotland, reclaims her rightful throne and menaces the future of Queen Elizabeth I as rules of England, because she has a legitimate claim to the English throne, Betrayals, rebellions, conspiracies and their own life choices imperit both Queens. They experience the bitter cost of power, until their tragic fate is finally fulfilled.</string>
    <string name="movies12_overview">Following his defeat by Master Ip, Cheung Tin Chi tries to make a life with his young son in Hong Kong, waiting tables at a bar that caters to expats. But it\'s not long before the mix of foreigners, money and triad leaders draw him once again to the fight.</string>
    <string name="movies13_overview">Many thousands of years in the future, Earth\'s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</string>
    <string name="movies14_overview">France, June 1944. On the eve of D-Day, some American paratroopers fall behind enemy lines after their aircraft crashes while on a mission to destroy a radio tower in a small village near the beaches of Normandy. After reaching their target, the surviving paratroopers realise that, in addition to fighting the Nazi troops that patrol the village, they also must fight against something else.</string>
    <string name="movies15_overview">Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the World Wide Web in search of a replacement part to save Vanellope\'s video game, Sugar Rush. In way over their heads, Ralph and Vanellope rely on the citizens of the internet — the netizens — to help navigate their way, including an entrepreneur named Yesss, who is the head algorithm and the heart and soul of trend-making site BuzzzTube.</string>
    <string name="movies16_overview">A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</string>
    <string name="movies17_overview">The quiet life of Baker Dill, a fishing boat captain who lives on the isolated Plymouth Island, where he spends his days obsessed with capturing an elusive tuna while fighting his personal demons, is interrupted when someone from his past comes to him searching for help.</string>
    <string name="movies18_overview">Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</string>
    <string name="movies19_overview">In 1944, a courageous group of Russian soldiers managed to escape from German captivity in a half-destroyed legendary T-34 tank. Those were the times of unforgettable bravery, fierce fighting, unbreakable love, and legendary miracles.</string>
    <string name="tv_shows1_overview">Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.</string>
    <string name="tv_shows2_overview">The Doom Patrol’s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence — and to protect Earth from what they find.</string>
    <string name="movies_name2">Alita: Battle Angel (2019)</string>
    <string name="cd_btn_show_more">Button to show more movies description</string>
    <string name="cd_btn_show_less">Button to show less movies description</string>
    <string name="cd_movies_poster">Movies poster</string>
    <string name="cd_movies_title">Movies name</string>
    <string name="cd_movies_overview">Movies Overview</string>
    <string name="cd_data_404">Data not found image</string>
    <string name="text_oops">Oops!</string>
    <string name="entry_not_found">Entry not found</string>
    <string name="cd_text_select_btn">Select</string>
    <string name="cd_text_close_btn">Close</string>
    <string name="text_radio_long_duration">Longest duration</string>
    <string name="text_radio_fast_duration">Fastest duration</string>
    <string name="text_radio_low_score">Lowest score</string>
    <string name="text_radio_high_score">Highest score</string>
    <string name="text_radio_newest_film">Newest</string>
    <string name="text_radio_oldest_film">Oldest</string>
    <string name="text_radio_random_film">Randomly</string>
    <string name="date_modified_label">Based on date modified</string>
    <string name="duration_label">Based on duration</string>
    <string name="score_label">Based on score</string>
    <string name="sort_film_title">Sort Film</string>
</resources>