<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_btn_show"
    style="@style/AllMatch">

    <Button
        android:id="@+id/btn_show_more"
        style="@style/ButtonLayout.Barrier.Appearance"
        android:layout_margin="@dimen/clear_size"
        android:contentDescription="@string/cd_btn_show_more"
        android:padding="@dimen/constraint_bound_small_size"
        android:text="@string/show_more_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_show_less"
        style="@style/ButtonLayout.Barrier.Appearance"
        android:layout_margin="@dimen/clear_size"
        android:contentDescription="@string/cd_btn_show_less"
        android:padding="@dimen/constraint_bound_small_size"
        android:text="@string/show_less_description"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>