<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchWrap">

    <androidx.cardview.widget.CardView
        style="@style/CardListSizeWrap.MediumCardView.TopBotBarrier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/MatchWrap.Gravity.PaddBot"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/poster_film"
                style="@style/ClearXPosterSize.ImageFitXY"
                android:layout_width="match_parent"
                android:contentDescription="@string/cd_movies_poster"
                tools:ignore="ContentDescription"
                tools:src="@drawable/poster_alita" />

            <TextView
                android:id="@+id/film_name"
                style="@style/ClearXWrap.SansFontReg.AllPad.TextAppearances"
                android:layout_width="match_parent"
                android:contentDescription="@string/cd_movies_title"
                tools:text="@string/movies_name2" />

            <TextView
                android:id="@+id/film_overview"
                style="@style/ClearXWrap.SansFontReg.AllPad.TextAppearances.FormatStyle"
                android:layout_width="match_parent"
                android:contentDescription="@string/cd_movies_overview"
                tools:text="@string/movies2_overview" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>