<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/no_data_view_group"
    style="@style/AllMatch.WhiteBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_not_found"
        style="@style/ResourceImageSize"
        android:contentDescription="@string/cd_data_404"
        android:src="@drawable/img_no_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_oops"
        style="@style/ClearXWrap.SansFontReg.AllPad.TextAppearances.FormatStyle.GrayColor"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/text_oops"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toTopOf="@id/image_not_found"
        app:layout_constraintEnd_toEndOf="@id/image_not_found"
        app:layout_constraintStart_toStartOf="@id/image_not_found" />

    <TextView
        style="@style/ClearXWrap.SansFontReg.AllPad.TextAppearances.FormatStyle.GrayColor"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/entry_not_found"
        android:textSize="@dimen/text_title_size"
        app:layout_constraintEnd_toEndOf="@id/tv_oops"
        app:layout_constraintStart_toStartOf="@id/tv_oops"
        app:layout_constraintTop_toBottomOf="@id/image_not_found" />

</androidx.constraintlayout.widget.ConstraintLayout>